--- a/.netconfig
+++ b/.netconfig
@@ -2,7 +2,7 @@
 
 # https://github.com/danielpalme/ReportGenerator
 [ReportGenerator]
-	report = ./.testresults/*/coverage.cobertura.xml
+	report = ./.testresults/**/coverage.cobertura.xml
 	targetdir = .coverage
 	reporttypes = "Clover;Cobertura;MarkdownSummary;Html;JsonSummary;lcov;TextSummary"
 	title = Code coverage report
